# taxoninsertion

./: .gitignore  CITATION.cff  README.md  pyproject.toml  testing_beetles.py
src/taxoninsertion/: __init__.py  neo_connect.py  taxonomy.py
tests/: test_check_neo.py  test_connection.py  test_gbif.py  test_gbifTree.py  test_taxonomy.py
