[project]
name = "taxoninsertion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon", email = "simon.j.goring@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.6.0",
    "psycopg[binary,pool]>=3.2.4",
    "pygbif>=0.6.5",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests/"]